// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə kig siːz ðə gʊlf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə dɔgs siː ðə gʊlfs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə kig gɔkɪŋz æt ðə divəd",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə kig nat siːz ðə gʊlf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "rege βidereθ lubuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kadei βiderent lubuium",
    },
    {
      "english": "i give you the bread",
      "target": "ego dareo θuum",
    },
    {
      "english": "the king walks at the river",
      "target": "rege ambulaθ flume",
    },
    {
      "english": "the king does not see the wolf",
      "target": "rege non βidereθ lubuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "fewi mukiɳ fowemi",
    },
    {
      "english": "the dogs see the wolves",
      "target": "fofowemi mukiɳ fofowemi",
    },
    {
      "english": "i give you the bread",
      "target": "mi paɳa ʂiɳa",
    },
    {
      "english": "the king walks at the river",
      "target": "fewi kawa faki ʈemo",
    },
    {
      "english": "the king does not see the wolf",
      "target": "fewi ala mukiɳ fowemi",
    },
  ],
  "preset": "tokipona",
}
`;
